sol/2020_p1_f2_estrada.txt
Estrada
Resumo da correção
Pontuação 0 / 100
Linguagem C++17 / g++
Limite de tempo permitido 0,1 s
Limite de memória permitido 64.0 MB
Máximo tempo usado 0 s
Máxima memória usada N/D
Detalhes da correção
Execução dos testes
Compilação
Resultado da compilação Compilação terminou com falha
Saída Padrão (stdout):
Saída de erro padrão (stderr):
2020f2p1_estrada.cpp: In function ‘int main()’:
2020f2p1_estrada.cpp:23:22: error: ‘setprecision’ was not declared in this scope
   23 |     cout << fixed << setprecision(2) << min_interval << endl;
      |                      ^~~~~~~~~~~~
2020f2p1_estrada.cpp:5:1: note: ‘std::setprecision’ is defined in header ‘<iomanip>’; did you forget to ‘#include <iomanip>’?
    4 | #include <algorithm>
  +++ |+#include <iomanip>
    5 |
